--- a/src/client/styles/base/_variables.scss
+++ b/src/client/styles/base/_variables.scss
@@ -71,7 +71,7 @@ $base-border: 1px solid $base-border-color;
 $form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
 $form-box-shadow-focus: none;
 
-$focus-outline-color: $secondary-blue-light;
+$focus-outline-color: $sba-gray-light;
 $focus-outline-width: 2px;
 $focus-outline: $focus-outline-width dotted $focus-outline-color;
 $focus-outline-offset: 3px;
